# ShanghaiTech_Robomasters2018

./: .gitignore  .mxproject  README.md  RMv3testDemo.ioc  debug.py  mx.scratch
Firmware/: .gitignore  .mxproject  README.md  RMv3testDemo.ioc  debug.py  rm_infantry.ioc
Firmware/Doc/: rm_infantry.txt
Firmware/Inc/: FreeRTOSConfig.h  RemoteTask.h  init.h  main.h  spi.h  stm32f4xx_it.h  tim.h  usart.h  usbd_conf.h
Firmware/MDK-ARM/: JLinkLog.txt  PC_communication_task.c  PC_communication_task.h  RMv3testDemo.uvoptx  RMv3testDemo.uvprojx  can_send_task.c  can_send_task.h  chasis_task.c  chasis_task.h  detect_task.c  detect_task.h  gimbal_task.c  gimbal_task.h  init.c  (+9 more)
Inc/: RemoteTask.h  can.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h  usb_device.h  usbd_conf.h
MDK-ARM/: JLinkLog.txt  RMv3testDemo.BAT  RMv3testDemo.uvguix.albert.deng  RMv3testDemo.uvoptx  RMv3testDemo.uvprojx  init.c
PC_Communication/: .gitignore  CMakeLists.txt  CommunicateNode.cpp  CommunicateNode.h  SerialPort.cpp  SerialPort.h  board_info.h  judgement_info.h  main.cpp  protocol.cpp  protocol.h
PC_Communication_PY/: .gitignore  CommunicationNode.py  GUI_main.py  README.md  board_info.py  judgement_info.py  protocol.py
RmLib/: LostCounter.h  common.h.bak  fifo.h.bak  pid_regulator.h.bak  ramp.h.bak
RoboRTS-Firmware/: rm_infantry.ioc
Src/: RemoteTask.c  can.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c  usbd_conf.c  usbd_desc.c
Tutorial/: tutorial.md
rmlib/: calibrate.h  judgement_info.h  pid.h  protocol.c  remote_ctrl.c
(+152 files in other folders)
